--- a/styles/index.css
+++ b/styles/index.css
@@ -5,8 +5,13 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     padding: 20px;
     display: flex;
-    justify-content: space-around;
+    justify-content: right;
     width: 100%;
+}
+#navBar>div{
+    display: flex;
+    justify-content: space-around;
+    width: 33%;
 }
 #container{
     display: flex;
@@ -33,4 +38,40 @@
     height: 100%;
     border-radius: 20px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+#movies{
+    border: 2px solid red;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3,auto);
+    gap: 20px;
+}
+.moviediv{
+    width: 99%;
+    border: 2px solid red;
+    display: flex;
+    flex-direction: column;
+}
+.movieimagediv{
+    height: 70%;
+    width: 100%;
+    border: 2px solid red;
+    box-sizing: border-box;
+}
+.movieimagediv img{
+    box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+    border-radius: 20px;
+    padding: 20px;
+    margin: auto;
+}
+.releaseDteAndRatingdiv{
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
+}
+.releaseDteAndRatingdiv p{
+    padding: 30px;
+    color: red;
 }
